# gomeltrans-api

./: .gitignore  README.md  base.py  config.py  main.py  pyproject.toml
src/: __init__.py
src/api/: __init__.py
src/api/v1/: __init__.py  get_route_stops.py  get_routes.py  test.py
src/controllers/gomeltrans_client/: __init__.py  client.py  enums.py
src/controllers/http_client/: __init__.py  client.py  exceptions.py
src/exceptions/: route_not_found.py
src/schemas/: route.py  stop.py
src/static/: swagger-ui-bundle.js
src/swagger/: swagger.py
src/swagger/static/: swagger-ui.css
