[project]
name = "gomeltrans-api"
version = "0.0.1"
description = "Unofficial API for the site gomeltrans.net"
authors = [
    {name = "nerma <github.com/nerma-now>"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "validators (>=0.34.0,<0.35.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "async-lru (>=2.0.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
